# klutzbot

./: .gitignore  README.md  __init__.py  fmt.sh  main.py  pyproject.toml  requirements.txt
command_defs/: general.py
klutzbot/: __init__.py  bot.py
klutzbot/cards/: deck.py
klutzbot/command_defs/: __init__.py  command.py  message.py  novalue.py  react.py
klutzbot/general/: __init__.py  command.py  config.py  guild.py  message.py  react.py
klutzbot/obsolete/: __init__.py  bot.py  teatime.py  translator.py  ttb.py
klutzbot/teatime/: command.py  message.py  react.py
