[tool.poetry]
name = "klutzbot"
version = "0.1.0"
description = ""
authors = ["Justin Cheung <jrcheung168@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.0.0"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
